[tool.poetry]
name = "spark-connect-pyspar-conflict-repro"
version = "0.1.0"
description = ""
authors = ["Foo <example@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databricks-connect = "15.4.0"
pyspark = "3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
